fixes arrow alignment on sub menus

--- a/webapp/src/main/webapp/src/styles.less
+++ b/webapp/src/main/webapp/src/styles.less
@@ -458,7 +458,7 @@ body .select-menu-group {
   margin-top: @padding-base-vertical;
   margin-right: -@padding-base-horizontal;
   position: relative;
-  top: 2px;
+  top: 1px;
 }
 
 .dropdown-submenu.pull-left {
